--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                 Pilih Kategori
             </h2>
     
-            <!-- Tabs Navigation -->
-            <div class="flex justify-center space-x-4 mb-6">
-                <button class="tab-button px-6 py-2 bg-green-500 text-white rounded-lg focus:outline-none hover:bg-green-400 transition" onclick="showTab('semua')">Semua Kelas</button>
-                <button class="tab-button px-6 py-2 bg-green-500 text-white rounded-lg focus:outline-none hover:bg-green-400 transition" onclick="showTab('pemasaran')">Pemasaran</button>
-                <button class="tab-button px-6 py-2 bg-green-500 text-white rounded-lg focus:outline-none hover:bg-green-400 transition" onclick="showTab('desain')">Desain</button>
-                <button class="tab-button px-6 py-2 bg-green-500 text-white rounded-lg focus:outline-none hover:bg-green-400 transition" onclick="showTab('pengembangan')">Pengembangan Diri</button>
-                <button class="tab-button px-6 py-2 bg-green-500 text-white rounded-lg focus:outline-none hover:bg-green-400 transition" onclick="showTab('bisnis')">Bisnis</button>
-            </div>
-    
+          <!-- Tabs Navigation -->
+<div class="flex flex-wrap justify-center gap-2 md:gap-4 mb-6 overflow-x-auto">
+    <button class="tab-button px-6 py-2 bg-green-500 text-white rounded-lg focus:outline-none hover:bg-green-400 transition whitespace-nowrap" onclick="showTab('semua')">Semua Kelas</button>
+    <button class="tab-button px-6 py-2 bg-green-500 text-white rounded-lg focus:outline-none hover:bg-green-400 transition whitespace-nowrap" onclick="showTab('pemasaran')">Pemasaran</button>
+    <button class="tab-button px-6 py-2 bg-green-500 text-white rounded-lg focus:outline-none hover:bg-green-400 transition whitespace-nowrap" onclick="showTab('desain')">Desain</button>
+    <button class="tab-button px-6 py-2 bg-green-500 text-white rounded-lg focus:outline-none hover:bg-green-400 transition whitespace-nowrap" onclick="showTab('pengembangan')">Pengembangan Diri</button>
+    <button class="tab-button px-6 py-2 bg-green-500 text-white rounded-lg focus:outline-none hover:bg-green-400 transition whitespace-nowrap" onclick="showTab('bisnis')">Bisnis</button>
+</div>
+
             <div id="semua" class="tab-content">
                 <div class="container mx-auto px-8">
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
