--- a/register.html
+++ b/register.html
@@ -7,8 +7,8 @@
     <title>Register | VideoBelajar</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body class="bg-yellow-100 flex justify-center items-center min-h-screen">
-    <nav class="bg-white py-4 w-full fixed top-0">
+<body class="flex justify-center items-center min-h-screen">
+    <nav class="bg-white shadow-lg py-4 w-full fixed top-0">
         <div class="container mx-auto px-4">
           <a href="#" class="block"><img src="Logo.png" alt=""></a>
         </div>
